src/components/pk.module.css
body {
    margin: 0;
}

#main {

    box-sizing: border-box;

    height: 100vh;
    padding: 8px;

    display: grid;

    grid-template-columns: 1fr 300px;
    grid-template-rows: minmax(0,1fr);
}

#main_sheet {
    overflow-y: auto;
}

#main_chat {

    height: 100%;
    border: 3px solid black;
}

#chat {

    height: 100%;

    display: grid;
    grid-template-rows: min-content 1fr 100px;

    > .chat_header {
        padding: 5px 0;

        font-family: "MS Shell Dlg";
        font-size: 24px;
        font-weight: bold;

        justify-self: stretch;
        text-align: center;
    }

    > :not(:last-child) {
        border-bottom: 3px solid black;
    }
}

#chat_chatlog {

    height: 100%;

    overflow-y: scroll;
}


#chat_chatbox {
    padding: 5px;

    display: grid;
    grid-template-rows: repeat(2, auto);
}

#chat_chatbox > textarea {
    width: 100%;
    flex-grow: 1;
    resize: none;
    box-sizing: border-box;
    margin: 5px 0;
}


.chat_message_container {

    margin: 5px;
    padding: 6px 3px 6px 3px;
    border: 1px solid black;

    font-family: "MS Shell Dlg";

    display: grid;

    grid-auto-rows: auto;

    &.chat_error {
        background-color: #fdc0c0;
    }

    .chat_header {
        font-size: 14px;
        font-weight: bold;
    }

    .chat_message {
        font-size: 14px;
        font-weight: normal;
    }
}

.flex {
    display: flex;
    flex-wrap: nowrap;
}

.flex > * {
    
}

.flex > .flexchild_shrink {
    flex-shrink: 1;
    flex-grow: 0;
}

.flex > .flexchild_grow {
    flex-grow: 3;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type="number"] {
    -moz-appearance: textfield;
}

.pkattrbox_container {
    margin: 10;
    background-color: #ccc;
}

.pkhealthbox {
    width: 75px;
    height: 75px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    overflow: hidden;
    margin: 3;

    border: 3px solid black;
}

.pkhealthbox button, .pkhealthbox input {
    text-align: center !important;
}

.pkhitdicebox {
    width: 75px;
    height: 75px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    /* overflow: hidden; */
    margin: 3;

    border: 3px solid black;
}

.pkhitdicebox_inner {
    display: flex;
    justify-content: center;
    height: 30px;
}

.pkhitdicebox_inner * {
    font-size: 14px;
}

.pkhitdicebox_inner > button {
    margin: 0;
    padding: 0;
    border: 0;

    background-color: transparent;
    background-image: none;
    box-shadow: none;
    text-align: left;
    text-shadow: initial;
}

.pkhitdicebox_inner .pktextfield_container {
    min-width: 0;
}

.pkattrbox {
    width: 75px;
    height: 75px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    overflow: hidden;
    margin: 3;

    border: 3px solid black;
}

.pkattrbox .pktextfield {
    margin: 2;
}

.pkattrbox button, .pkattrbox input {
    text-align: center !important;
}

.pkstatsbox {
    width: 75px;
    display: flex;
    flex-direction: column;
    justify-items: center;
    text-align: center;
    overflow: hidden;
    margin: 3;
}

.bignumber button, .bignumber input {
    font-size: 28px;
}

.pkstatsbox .pktextfield {
    margin: 2;
}

.pkstatsbox button, .pkstatsbox input {
    text-align: center !important;
}

.pkskillfield {
    overflow-x: hidden;
}

.pkskillfield > * {
    display: inline-block;
}

.pkskillfield button, .pkskillfield input {
    text-align: center !important;
}

.pkswitch {

}

button.tri_inner {
    background-color: transparent;
    background-image: none;
    box-shadow: none;
    text-align: left;
    text-shadow: initial;
}

.tri_inner {
    margin: 5;
    padding: 0;

    width: 15px;
    height: 15px;
    border: 2px black solid;
}

.tri_inner.state0 {
    background-color: white;
}
.tri_inner.state1 {
    background-color: grey;
}
.tri_inner.state2 {
    background-color: orange;
}

.pkskillsfieldcontainer {
    padding: 5;
    margin: 5;
    border: 3px solid black;
}

.character_name {
    min-width: 160px;
}

.pktextfield {
    margin: 5;
    display: inline-block;
}

.pktextfield_label {
    font-size: 9px;
    text-transform: uppercase;
    font-family: Arial, Helvetica, sans-serif;
    white-space: pre-line;
}

.pktextfield_heading > .pktextfield_label {
    margin-left: 5px;
}

.pktextfield_heading > .pktextfield {
    width: calc(100% - 10px);
}

.pktextfield_container {
    display: grid;
    
    padding: 0;
    margin: 0;

    font-size: 14px;
    font-family: "MS Shell Dlg";

    min-width: 25px;
}

.pktextfield_container > * {

    padding: 0;
    margin: 0;

    grid-column: 1;
    grid-row: 1;

    border-bottom: 1px solid #ccc !important;

    width: 100%;
}

.pktextfield_container > input {
    background-color: rgba(0, 225, 255, 0.3);

    border: 0;
    border-radius: 0;
    box-shadow: none;
}

.pktextfield_container > button {
    margin: 0;
    padding: 0;
    border: 0;

    background-color: transparent;
    background-image: none;
    box-shadow: none;
    text-align: left;
    text-shadow: initial;
}

.pktextfield_container > button:hover {
    color: var(--joy-palette-primary-500)
}

.invisible {
    visibility: hidden;
}

